# remote_claude

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  cliff.toml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml  docker.yml  release.yml
apps/client/: Cargo.toml
apps/client/src/: config.rs  main.rs  protocol.rs  pty_session.rs  ws_client.rs
apps/server/: Cargo.toml
apps/server/src/: config.rs  main.rs
apps/web/: package.json  vite.config.ts
apps/web/src/: App.tsx  i18n.ts
desktop-client/: Cargo.toml  Dockerfile
desktop-client/src/: claude_runner.rs  config.rs  main.rs  protocol.rs  pty_session.rs  ws_client.rs
package/shared-types/: package.json
relay-server/: .dockerignore  Cargo.toml  Dockerfile
relay-server/src/: config.rs  error.rs  main.rs
relay-server/src/api/: admin.rs  auth.rs  devices.rs  downloads.rs  mod.rs  rate_limit.rs  sessions.rs  tokens.rs
relay-server/src/auth/: extractor.rs  jwt.rs  password.rs
relay-server/src/models/: client_token.rs  device.rs  mod.rs  registration_token.rs  session.rs  user.rs
relay-server/src/store/: memory_store.rs  mod.rs  sqlite_store.rs
relay-server/src/ws/: client_hub.rs  mod.rs  session.rs  web_hub.rs
shared-types/src/: index.ts
web-ui/: Dockerfile  index.html  nginx.conf  nginx.ssl.conf  package.json  vite.config.ts
web-ui/public/: config.json
web-ui/src/: App.tsx  config.ts  i18n.ts  main.tsx
web-ui/src/api/: client.test.ts  client.ts  ws.ts
(+65 files in other folders)
