[package]
name = "relay-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }

# web framework
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# auth
jsonwebtoken = "9"
argon2 = "0.5"

# utilities
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rand = "0.8"
futures-util = "0.3"
